# my-portfolio

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  justfile  sqlmodel-alembic.skill
.claude/: settings.local.json
backend/: .appliku_env  .dockerignore  .env.example  Dockerfile  Dockerfile.dev  alembic.ini  appliku.yml  pyproject.toml
backend/alembic/: env.py
backend/src/app/: config.py  database.py  main.py
backend/src/app/models/: __init__.py
backend/src/app/routers/: github.py
backend/tests/: conftest.py
frontend/: .appliku_env  Dockerfile  Dockerfile.dev  angular.json  appliku.yml  docker-entrypoint.sh  favicon-generator.html  nginx.conf  package-lock.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts
frontend/src/app/components/contact/: contact.component.html  contact.component.scss  contact.component.ts
frontend/src/app/components/geno-claw/: geno-claw.component.html  geno-claw.component.scss  geno-claw.component.ts
frontend/src/app/components/hero/: hero.component.html  hero.component.scss  hero.component.ts
frontend/src/app/components/nav/: nav.component.html  nav.component.scss  nav.component.ts
frontend/src/app/components/project-card/: project-card.component.html  project-card.component.scss  project-card.component.ts
frontend/src/app/models/: project.model.ts
frontend/src/app/services/: config.service.ts  github.service.ts  meta-image.service.ts  portfolio.service.ts
frontend/src/assets/: config.json
(+6 files in other folders)
